# gpu_programming

./: .gitignore
assignment01/: gpu_task1.ipynb  readme.md
assignment02/: CMakeLists.txt  gpu_assignment_2.ipynb
assignment02/matrix_io/: CMakeLists.txt  generate_data.py  matrix_io.cpp  matrix_io.hpp
assignment02/task01/: CMakeLists.txt  device_info.cu
assignment02/task02/: CMakeLists.txt  main.cpp
assignment02/task03/: CMakeLists.txt  gpu_wrapper.cu  gpu_wrapper.hpp  main.cpp
assignment02/task04/: benchmark.py  task04.md
assignment02/task05/: benchmark.py  task05.md
assignment03/: CMakeLists.txt  denoise.h  denoise_cpu.cpp  denoise_gpu.cu  hpc.h  main.cpp  ppm_utils.cpp  ppm_utils.h
